# fpga2C

./: .~lock.Pinout.ods#  Materiel.ods  Pinout.ods  README.md  Rapport.odt  vivado.jou  vivado_103871.backup.jou  vivado_108162.backup.jou  vivado_108949.backup.jou  vivado_11095.backup.jou  vivado_11192.backup.jou  vivado_119192.backup.jou  vivado_119250.backup.jou  vivado_126432.backup.jou  vivado_127202.backup.jou  vivado_128128.backup.jou  vivado_130966.backup.jou  vivado_13097.backup.jou  vivado_13635.backup.jou  vivado_14209.backup.jou  vivado_15336.backup.jou  vivado_15702.backup.jou  vivado_15916.backup.jou  vivado_16809.backup.jou  vivado_177616.backup.jou  vivado_178403.backup.jou  vivado_17935.backup.jou  vivado_181388.backup.jou  vivado_19717.backup.jou  vivado_21459.backup.jou  vivado_22892.backup.jou  vivado_23065.backup.jou  vivado_23552.backup.jou  vivado_27407.backup.jou  vivado_28866.backup.jou  vivado_28953.backup.jou  vivado_30026.backup.jou  vivado_31035.backup.jou  vivado_31183.backup.jou  vivado_31191.backup.jou  (+81 more)
.Xil/: main_design_wrapper_propImpl.xdc
Breakout-gerbers/: Breakout-F_Cu.gtl  Breakout-F_Mask.gts  Breakout-PTH-drl_map.gbr  Breakout-PTH.drl
Kick/: Kick.kicad_pcb  Kick.kicad_prl  Kick.kicad_pro  Kick.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~_autosave-Kick.kicad_pcb.lck
MainBoard-gerbers/: MainBoard-B_Paste.gbp  MainBoard-F_Cu.gtl  MainBoard-F_Silkscreen.gto  (+2 more)
ZTurnV2/ZTurnV2.runs/main_design_v_mix_0_0_synth_1/prj/sol/impl/ip/drivers/main_design_v_mix_0_0_v_mix_v5_2/src/: CMakeLists.txt  xmain_design_v_mix_0_0_v_mix_hw.h
(+6126 files in other folders)
